--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/main"
-        android:paddingVertical="10dp"
+        android:paddingVertical="17dp"
         android:paddingHorizontal="15dp"
         android:orientation="horizontal"
         >
@@ -37,20 +39,10 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/user"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/profile"
                 />
-        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="15dp"
-        android:orientation="horizontal">
-
     </LinearLayout>
-
 </ScrollView>
