--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:importantForAccessibility="no" />
+                android:src="@drawable/backarrow"/>
 
             <Space
                 android:layout_width="0dp"
@@ -46,7 +46,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/profile" />
+                    android:src="@drawable/setting" />
             </LinearLayout>
         </LinearLayout>
 
