--- a/app/src/main/res/layout/review_owner.xml
+++ b/app/src/main/res/layout/review_owner.xml
@@ -10,11 +10,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:paddingVertical="17dp"
+        android:background="@color/main"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:paddingHorizontal="15dp"
-        android:orientation="horizontal">
+        android:paddingVertical="17dp">
 
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/backarrow"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
