Started sign in for firebase

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,47 +23,55 @@
             android:src="@drawable/profile_round_1346_svgrepo_com" />
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:background="@drawable/login_edittext"
             android:hint="Enter Email"
+            android:inputType="textEmailAddress"
             android:padding="8dp" />
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/login_edittext"
             android:hint="Enter Password"
+            android:inputType="textPassword"
             android:padding="8dp" />
 
         <EditText
+            android:id="@+id/confirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/login_edittext"
             android:hint="Confirm Password"
+            android:inputType="textPassword"
             android:padding="8dp" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="@color/white"
             android:background="@drawable/rounded_corner_no_bg"
             android:backgroundTint="@color/main"
             android:text="Sign Up"
+            android:textColor="@color/white"
             android:textSize="16dp" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/backButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:background="@drawable/rounded_corner_no_bg"
             android:backgroundTint="@color/black"
-            android:textColor="@color/white"
             android:text="Back"
+            android:textColor="@color/white"
             android:textSize="16dp" />
     </LinearLayout>
 </ScrollView>
