--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:layout_margin="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
@@ -26,6 +26,7 @@
             android:layout_marginTop="80dp"
             android:padding="8dp"
             android:hint="Enter Email"
+            android:inputType="textEmailAddress"
             />
 
         <EditText
@@ -35,9 +36,11 @@
             android:layout_marginTop="20dp"
             android:padding="8dp"
             android:hint="Enter Password"
+            android:inputType="textPassword"
             />
 
         <TextView
+            android:id="@+id/register"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
