--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -29,6 +29,9 @@
             android:layout_weight="1"
             />
 
+<!--        android:text="@string/edit"-->
+
+
         <TextView
             android:layout_marginTop="5dp"
             android:layout_width="50dp"
@@ -36,17 +39,18 @@
             android:textAlignment="center"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:text="@string/edit"
             />
 
 
     </LinearLayout>
 
+<!--        android:text="@string/Profile"-->
+
+
         <TextView
             android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Profile"
             android:textSize="20dp"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
