--- a/app/src/main/res/layout/review_owner.xml
+++ b/app/src/main/res/layout/review_owner.xml
@@ -31,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="16dp"
         android:gravity="center|start">
 
         <com.google.android.material.imageview.ShapeableImageView
