--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -34,7 +34,7 @@
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:textAlignment="center"
-            android:textSize="15dp"
+            android:textSize="17dp"
             android:textColor="@color/white"
             android:text="@string/edit"
             />
@@ -46,7 +46,7 @@
             android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Profile"
+            android:text="@string/profile"
             android:textSize="20dp"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
