--- a/app/src/main/res/layout/review_owner.xml
+++ b/app/src/main/res/layout/review_owner.xml
@@ -134,7 +134,7 @@
                         android:src="@drawable/bg"
                         android:scaleType="centerCrop"
                         android:adjustViewBounds="true"
-                        android:layout_marginRight="8dp"/>
+                        android:layout_marginRight="16dp"/>
 
                     <LinearLayout
                         android:id="@+id/title"
@@ -159,42 +159,13 @@
                             android:maxLines="1"
                             android:ellipsize="end"
                             android:textSize="16sp"/>
-                        
-                        <LinearLayout
+
+                        <RatingBar
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="16dp">
-
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:src="@drawable/star_solid"/>
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:src="@drawable/star_solid"/>
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:src="@drawable/star_solid"/>
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:src="@drawable/star_solid"/>
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:src="@drawable/star_regular"/>
-                        </LinearLayout>
-
-<!--                        <com.google.android.material.button.MaterialButton-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            app:cornerRadius="10dp"-->
-<!--                            android:text="1"-->
-<!--                            android:layout_marginTop="10dp"-->
-<!--                            android:layout_gravity="end"/>-->
+                            android:scaleX="0.7"
+                            android:scaleY="0.7"
+                            android:gravity="start"/>
 
                     </LinearLayout>
 
