--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,10 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+    <style name="SmallRatingBar" parent="Widget.AppCompat.RatingBar">
+        <item name="android:minHeight">16dp</item> <!-- Adjust height -->
+        <item name="android:maxHeight">16dp</item> <!-- Adjust height -->
+    </style>
 
     <style name="Theme.Hackathon" parent="Base.Theme.Hackathon" />
 </resources>
