homepage and others ulet

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,19 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:orientation="vertical">
-
     <ScrollView
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="0dp">
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,43 +46,64 @@
                         android:src="@drawable/setting" />
                 </LinearLayout>
 
-
             </LinearLayout>
+            <!--posts-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-            <androidx.viewpager.widget.ViewPager
-                android:layout_width="match_parent"
-                android:layout_height="1000dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <com.google.android.material.tabs.TabLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/circle" />
 
-                    <com.google.android.material.tabs.TabItem
+                    <TextView
+                        android:layout_width="300dp"
                         android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="Your Feed"
-                        />
+                        android:orientation="horizontal"
+                        android:layout_marginLeft="5dp"
+                        android:text="Client Name"
+                        android:textAppearance="@color/black"
+                        android:textSize="22dp"/>
+                </LinearLayout>
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="Your Listings"
-                        />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="-15dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="Prompt"
+                    android:textSize="17dp"/>
 
-                </com.google.android.material.tabs.TabLayout>
-
-            </androidx.viewpager.widget.ViewPager>
-
+                <ImageView
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/comment"
+                    />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
-
 
     <!--home buttons-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -101,9 +120,10 @@
                 android:src="@drawable/house" />
 
             <Space
+                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="1" />
+                />
 
             <ImageView
                 android:layout_width="25dp"
@@ -111,9 +131,10 @@
                 android:src="@drawable/message" />
 
             <Space
+                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_weight="1" />
+                />
 
             <ImageView
                 android:layout_width="25dp"
