--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,7 @@
             />
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/login_edittext"
@@ -30,6 +31,7 @@
             />
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/login_edittext"
@@ -56,6 +58,7 @@
             android:textSize="16dp"
             android:text="Sign In"
             android:background="@drawable/rounded_corner_no_bg"
+            android:id="@+id/signInButton"
         />
 
         <TextView
@@ -67,6 +70,7 @@
             />
 
         <LinearLayout
+            android:id="@+id/googleSignIn"
             android:orientation="horizontal"
             android:padding="4dp"
             android:background="@drawable/rounded_corner_black_outline"
