--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -83,6 +83,10 @@
         android:id="@+id/feed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:name="com.example.hackathon.home"/>
 
     </FrameLayout>
 
