--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -108,6 +108,16 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:src="@drawable/add" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/message" />
 
             <Space
