--- a/app/src/main/res/layout/notif_settings.xml
+++ b/app/src/main/res/layout/notif_settings.xml
@@ -6,6 +6,7 @@
 
     >
     <ImageView
+        android:id="@+id/notifback"
         android:layout_margin="10dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
