--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -19,6 +19,7 @@
         >
 
         <ImageView
+            android:id="@+id/profileback"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/backarrow"
