--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/settingsback"
         android:layout_margin="10dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -57,7 +58,22 @@
         />
 
     <TextView
-        android:layout_marginTop="260dp"
+        android:id="@+id/rewardsbt"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="390dp"
+        android:layout_height="100dp"
+        android:text="@string/rewards"
+        android:textColor="@color/main"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:paddingTop="35dp"
+        android:background="@drawable/subsettings_rounded"
+        />
+
+    <TextView
+        android:layout_marginTop="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contact"
