--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -44,6 +44,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/settings"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:importantForAccessibility="no"
