--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -13,22 +13,20 @@
         />
 
 
-
-        <TextView
-            android:id="@+id/profile"
-            android:layout_marginTop="160dp"
-            android:layout_margin="10dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="390dp"
-            android:layout_height="100dp"
-            android:text="@string/profile_set"
-            android:textColor="@color/main"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:paddingTop="35dp"
-            android:background="@drawable/subsettings_rounded"
-            />
+    <TextView
+        android:id="@+id/profile"
+        android:layout_width="390dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:layout_marginTop="160dp"
+        android:background="@drawable/subsettings_rounded"
+        android:paddingTop="35dp"
+        android:text="@string/profile_set"
+        android:textAlignment="center"
+        android:textColor="@color/main"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/notifications"
