--- a/app/src/main/res/layout/rewards.xml
+++ b/app/src/main/res/layout/rewards.xml
@@ -19,6 +19,7 @@
         android:paddingVertical="17dp">
 
         <ImageView
+            android:id="@+id/rewardsback"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/backarrow"/>
