--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,129 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/main">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/main"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="15dp"
-        android:orientation="horizontal"
-        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
-        <ImageView
-            android:id="@+id/profileback"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/backarrow"
-            />
-        <Space
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:background="@color/main"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="15dp"
+            android:orientation="horizontal"
+            >
 
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
-            android:textAlignment="center"
-            android:textSize="17dp"
-            android:textColor="@color/white"
-            android:text="@string/edit"
-            />
+            <ImageView
+                android:id="@+id/profileback"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/backarrow"
+                />
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                />
 
-
-    </LinearLayout>
-
-        <TextView
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/profile"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            />
-
-        <ImageView
-            android:layout_marginTop="20dp"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/default_profile"
-            />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:textSize="17dp"
+                android:textColor="@color/white"
+                android:text="@string/edit"
+                />
 
 
-        <TextView
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="Name"
-            android:layout_gravity="center_horizontal"
-            android:visibility="visible"
-            />
+        </LinearLayout>
 
-        <TextView
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="Password"
-            android:layout_gravity="center_horizontal"
-            android:visibility="visible"
-            />
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/profile"
+                android:textSize="20dp"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                />
 
-        <TextView
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="University"
-            android:layout_gravity="center_horizontal"
-            android:visibility="visible"
-            />
+            <ImageView
+                android:layout_marginTop="20dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/default_profile"
+                />
 
-        <EditText
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="Name"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            />
 
-        <EditText
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="New  Password"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            />
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="Name"
+                android:layout_gravity="center_horizontal"
+                android:visibility="visible"
+                />
 
-        <EditText
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="Confirm New Password"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            />
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="Password"
+                android:layout_gravity="center_horizontal"
+                android:visibility="visible"
+                />
 
-        <EditText
-            android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="University"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            />
-    </LinearLayout>
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="University"
+                android:layout_gravity="center_horizontal"
+                android:visibility="visible"
+                />
 
-</ScrollView>
+            <EditText
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="Name"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+                />
+
+            <EditText
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="New  Password"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+                />
+
+            <EditText
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="Confirm New Password"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+                />
+
+            <EditText
+                android:layout_marginTop="20dp"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="University"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+                />
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
