--- a/app/src/main/res/layout/notif_settings.xml
+++ b/app/src/main/res/layout/notif_settings.xml
@@ -39,6 +39,7 @@
                 android:textStyle="bold"
                 />
 
+            <!--toggle-->
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="35dp"
