--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -16,13 +16,12 @@
 
     <TextView
         android:id="@+id/profile"
-        android:layout_width="390dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
-        android:layout_marginTop="160dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        android:padding="20dp"
         android:background="@drawable/subsettings_rounded"
-        android:paddingTop="35dp"
         android:text="@string/profile_set"
         android:textAlignment="center"
         android:textColor="@color/main"
@@ -31,46 +30,46 @@
 
     <TextView
         android:id="@+id/notifications"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="390dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:padding="20dp"
         android:text="@string/notif"
         android:textColor="@color/main"
         android:textSize="20dp"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:paddingTop="35dp"
         android:background="@drawable/subsettings_rounded"
         />
 
     <TextView
         android:id="@+id/privacy"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="390dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        android:padding="20dp"
         android:text="@string/privacy"
         android:textColor="@color/main"
         android:textSize="20dp"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:paddingTop="35dp"
         android:background="@drawable/subsettings_rounded"
         />
 
     <TextView
         android:id="@+id/rewardsbt"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="390dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:padding="20dp"
         android:text="@string/rewards"
         android:textColor="@color/main"
         android:textSize="20dp"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:paddingTop="35dp"
         android:background="@drawable/subsettings_rounded"
         />
 
