--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -113,6 +113,7 @@
                 android:layout_weight="1" />
 
             <ImageView
+                android:id="@+id/add"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/add" />
