--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -102,6 +102,16 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:src="@drawable/add" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/message" />
 
             <Space
@@ -110,11 +120,9 @@
                 android:layout_weight="1" />
 
             <ImageView
-                android:id="@+id/wallet"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/wallet" />
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
