--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -50,8 +50,6 @@
                         android:importantForAccessibility="no"
                         android:src="@drawable/setting" />
                 </LinearLayout>
-
-
             </LinearLayout>
 
             <androidx.viewpager.widget.ViewPager
@@ -103,17 +101,7 @@
                 android:id="@+id/add"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/add" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1" />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/add" />
+                android:src="@drawable/add"/>
 
             <Space
                 android:layout_width="0dp"
@@ -133,6 +121,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:id="@+id/wallet"
                 android:src="@drawable/wallet" />
         </LinearLayout>
     </LinearLayout>
