--- a/app/src/main/res/layout/activity_add_feed.xml
+++ b/app/src/main/res/layout/activity_add_feed.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/backButton"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
