disabled firebase auth

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -109,6 +109,7 @@
                 android:layout_weight="1" />
 
             <ImageView
+                android:id="@+id/messaging"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:src="@drawable/message" />
